syntax = "proto3";

package extractor;

service ExtractorService {
  rpc ExtractText (ExtractRequest) returns (ExtractionResponse);
}

message ExtractRequest {
  string file_path = 1;
  string job_id = 2;
}

message ExtractionResponse {
  string job_id = 1;
  string status = 2;
  string text = 3;
  // float progress = 4;
}

// create a new type of data that will be used to send the file to the server